fix: popup is misaligned with Redmine's new tab system

--- a/assets/stylesheets/changeset_statuses.css
+++ b/assets/stylesheets/changeset_statuses.css
@@ -35,13 +35,12 @@ details.changeset-status__popover[open] > summary:before {
   background-color: #fff;
   border: 1px solid #c0c0c0;
   border-radius: 3px;
-  left: 50%;
+  left: -2px;
   margin-top: 3px;
   max-width: 300px;
   padding: 6px;
   position: absolute;
   top: 100%;
-  transform: translateX(-50%);
   z-index: 100;
 }
 
@@ -51,7 +50,7 @@ details.changeset-status__popover[open] > summary:before {
   border-bottom: 3px solid #c0c0c0;
   content: '';
   display: block;
-  left: 50%;
+  left: 5px;
   position: absolute;
   top: -4px;
   transform: translateX(-50%);
